--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" sizes="16x16" href="./icon/favicon.png">
     
-    <title>CodeClub</title>
+    <title>CodeCourse</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
